[package]
name = "caravan"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "caravan"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-token-metadata = "2.0.0-beta.1"
mpl-token-auth-rules = "1.4.3"
mpl-bubblegum = { version = "0.10.0", features = ["no-entrypoint", "cpi"] } 
spl-account-compression = { version="0.2.0", features = ["cpi"] }
